# CUDA-for-ML-acceleration

./: .gitignore  CMakeLists.txt  README.md  build.sh  toolchain-aarch64.cmake
cmake/toolchains/: Toolchain_aarch64_l4t.cmake
config/: controls.json
gesture_recognition_tensorrt/: CMakeLists.txt  main_engine.cpp
gesture_recognition_tensorrt/model-parameters/: model_metadata.h  model_variables.h
gesture_recognition_tensorrt/tflite-model/: gesture.engine  onnx-trained.h  trained.onnx
image-correction-pipeline/: CMakeLists.txt  README.md
image-correction-pipeline/config/: controls.json
image-correction-pipeline/include/: color_ops.cuh  ei_gesture_infer.cuh  gstreamer_pipeline.hpp  image_correction.hpp  kernel_color.cuh  kernel_enhance.cuh  kernel_rectify.cuh  nvivafilter_customer_api.hpp  rectify_config.hpp  rectify_kernels.cuh  rtp_sender.hpp  runtime_controls.hpp  trt_gesture.hpp  wire_author_server.cuh  wire_lineremoval.cuh
image-correction-pipeline/src/: camera_pipeline.cpp  color_ops.cu  ei_gesture_infer.cu  gstreamer_pipeline.cpp  image_correction.cu  kernel_color.cu  kernel_enhance.cu  kernel_rectify.cu  nvivafilter_imagecorrection.cpp  nvivafilter_rectify.cpp  nvivafilter_rectify.cu  rectify_kernels.cu  rtp_sender.cpp  runtime_controls.cpp  trt_gesture.cpp  wire_author_server.cu  wire_lineremoval.cu
include/cnn/: utils.hpp
photo-editing-pipeline/: CMakeLists.txt  README.md
photo-editing-pipeline/src/: photo_edit.cu
post-editing-pipeline/: CMakeLists.txt  README.md
post-editing-pipeline/config/: editing.json
post-editing-pipeline/include/: runtime_controls.hpp
post-editing-pipeline/src/: color_ops.cu  nvivafilter_postediting.cpp  runtime_controls.cpp
src/: main.cu  utils.cu
wire-removal-pipeline/: CMakeLists.txt  README.md
wire-removal-pipeline/common/: protocol.hpp
wire-removal-pipeline/include/: wire_lineedge.cuh
wire-removal-pipeline/src/: nvivafilter_wireedges.cpp  wire_lineedge.cu
wire-removal-pipeline/tools/: CMakeLists.txt  mask_exchange_server.cpp
wire-removal-pipeline/wsl/mask_painter_client/: mask_painter_client.py
